chuyen doi thu muc

--- a/22700111_vu_quoc_thai/html/home.html
+++ b/22700111_vu_quoc_thai/html/home.html
@@ -69,7 +69,7 @@
           <img src="../hinh/Image20240225171012.jpg" alt="" />
         </aside>
       </div>
-      <footer>22700111 - VŨ QUỐC THÁI</footer>
+      <footer>22700111 - VŨ QUỐC THÁI.</footer>
     </div>
   </body>
 </html>
